--- a/style.css
+++ b/style.css
@@ -3,3 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+}
