--- a/style.css
+++ b/style.css
@@ -4,9 +4,8 @@
     box-sizing: border-box;
 }
 
-header div{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
+
+header {
+    width: 100%;
+    height: 100vh;
 }
