--- a/style.css
+++ b/style.css
@@ -4,8 +4,41 @@
     box-sizing: border-box;
 }
 
+:root{
+    --primary-color: #7CB0A1;
+    --secondary-color: #FCFBF3;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
 
 header {
     width: 100%;
     height: 100vh;
+}
+
+.navbar{
+    width: 100%;
+    height: 50px;
+    background-color: var(--primary-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.1);
+    padding: 0 20px;
+}
+
+nav a{
+    margin: 10px;
+    text-decoration: none;
+}
+
+video{
+    width: 100%;
+    height: 100%;
 }
