--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@
     --secondary-color: #FCFBF3;
 }
 
+body{
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    background-color: var(--secondary-color);
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
 body::-webkit-scrollbar {
     display: none;
 }
@@ -20,7 +28,7 @@ header {
 
 .navbar{
     width: 100%;
-    height: 50px;
+    height: 100px;
     background-color: var(--primary-color);
     display: flex;
     justify-content: space-between;
@@ -29,8 +37,31 @@ header {
     top: 0;
     left: 0;
     z-index: 1;
-    box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.5);
     padding: 0 20px;
+}
+
+.logo_img{
+    width: 100px;
+    height: 100%;
+    border: 2px solid var(--primary-color);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    background-color: var(--secondary-color);
+}
+
+.logo_img:hover{
+    box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.5);
+    transition: .5s;
+}
+
+.logo_img img{
+    width: 100%;
+    height: 100%;
 }
 
 nav a{
@@ -38,7 +69,46 @@ nav a{
     text-decoration: none;
 }
 
+nav a:hover{
+    border: 1px solid;
+    border-radius: 5px;
+    padding: 5px;
+    font-size: 150%;
+    transition: .5s;
+    background-color: var(--secondary-color);
+    box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.3);
+}
+
 video{
     width: 100%;
     height: 100%;
+    opacity: 1;
+    filter: blur(.1rem) brightness(.5);
+    pointer-events: none;
+}
+
+.hero_text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.hero_text h1{
+    color: var(--secondary-color);
+    font-size: 50px;
+    margin-bottom: 20px;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.hero_text button{
+    padding: 10px 20px;
+    font-size: 15px;
+    background-color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 5px;
+    color: var(--secondary-color);
+    margin-top: 20px;
+    cursor: pointer;
 }
