--- a/style.css
+++ b/style.css
@@ -112,3 +112,21 @@ video{
     margin-top: 20px;
     cursor: pointer;
 }
+
+.hero_text button:hover{
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    transition: .5s;
+}
+
+section{
+    height: 50vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--secondary-color);
+    border: 1px solid black;
+    margin: 20px;
+    box-sizing: content-box;
+    padding: 20px;
+}
