--- a/style.css
+++ b/style.css
@@ -70,13 +70,11 @@ nav a{
 }
 
 nav a:hover{
-    border: 1px solid;
-    border-radius: 5px;
-    padding: 5px;
-    font-size: 150%;
-    transition: .5s;
     background-color: var(--secondary-color);
-    box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.3);
+    color: var(--primary-color);
+    padding: 5px;
+    border-radius: 5px;
+    transition: .2s;
 }
 
 video{
