--- a/style.css
+++ b/style.css
@@ -40,10 +40,12 @@ header {
     z-index: 1;
     box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.5);
     padding: 0 20px;
+    font-size: 25px;
+    transition: 0.1s;
 }
 
 .logo_img{
-    width: 100px;
+    width: 8%;
     height: 100%;
     border: 2px solid var(--primary-color);
     border-radius: 50%;
