--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body::-webkit-scrollbar {
 
 header {
     width: 100%;
-    height: 100vh;
+    height: 550px;
 }
 
 .navbar{
@@ -169,15 +169,33 @@ video{
 }
 
 .events span{
+    margin: 20px;
     padding: 10px;
     width: 33.33%;
     height: 100%;
     text-align: center;
+    position: relative;
 }
 
 .events span img{
-    width: 90%;
-    height: auto;
-    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.overlay {
+    position: absolute;
+    box-sizing: border-box;
+    bottom: 0;
+    transform: translate(0, 100%);
+    padding: 15px;
+    background-color: rgba(0,0,0,0.5);
+    text-align:center;
+    transition: all 0.2s ease-in;
+  }
+
+.events span:hover .overlay {
+    transform: translate(0, 0);
+	transition: all 0.2s ease-in;
 }
