--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ video{
 
 .tag{
     float: left;
-    
+    font-weight: bold;
     padding: 8px;
     background-color: var(--primary-color);
     border-radius: 0 0 20px 0px;
@@ -253,6 +253,12 @@ video{
     margin-left: 60px;
     margin-bottom: 20px;
     border-radius: 50%;
-    vertical-align: middle;
+    overflow: hidden;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.feed-img img{
+    width: 100%;
+    height: 100%;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
