--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Whole Page */
+
 * {
     margin: 0;
     padding: 0;
@@ -8,6 +10,8 @@
     --primary-color: #7CB0A1;
     --secondary-color: #FCFBF3;
 }
+
+/* Body */
 
 body{
     overflow-x: hidden;
@@ -21,6 +25,25 @@ body{
 body::-webkit-scrollbar {
     display: none;
 }
+
+button {
+    padding: 10px 20px;
+    font-size: 15px;
+    background-color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 5px;
+    color: var(--secondary-color);
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+button:hover {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+}
+
+
+/* Header */
 
 header {
     width: 100%;
@@ -103,25 +126,6 @@ video{
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.hero_text button{
-    padding: 10px 20px;
-    font-size: 15px;
-    background-color: var(--primary-color);
-    border: 1px solid var(--primary-color);
-    border-radius: 5px;
-    color: var(--secondary-color);
-    margin-top: 20px;
-    cursor: pointer;
-}
-
-.hero_text button:hover{
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
-    transition: .5s;
-}
-
-
-
 .numbers{
     display: flex;
     justify-content: space-between;
@@ -196,23 +200,6 @@ video{
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
-.overlay button{
-    padding: 10px 20px;
-    font-size: 15px;
-    background-color: var(--primary-color);
-    border: 1px solid var(--primary-color);
-    border-radius: 5px;
-    color: var(--secondary-color);
-    margin-top: 20px;
-    cursor: pointer;
-}
-
-.overlay button:hover{
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
-    transition: .5s;
-}
-
 /* Feedback */
 
 .feedback{
@@ -221,9 +208,10 @@ video{
     justify-content: space-between;
     align-items: center;
     background-color: var(--secondary-color);
-    margin: 20px;
+    padding: 20px;
     box-sizing: content-box;
     padding: 20px;
+    
 }
 
 .feedback span{
@@ -235,42 +223,74 @@ video{
     border: 2px solid black;
     border-radius: 20px 0px 20px 0px;
     overflow: hidden;
+
 }
 
-.tag{
+.tag {
     float: left;
     font-weight: bold;
     padding: 8px;
     background-color: var(--primary-color);
-    border-radius: 0 0 20px 0px;
-    
+    border-radius: 0 0 20px 0;
 }
 
-.feed-img{
+
+.feed-img {
     width: 50%;
     height: 50%;
-    margin-top: 40px;
-    margin-left: 60px;
-    margin-bottom: 20px;
+    margin: 40px auto 20px; /* Center horizontally and adjust margins */
     border-radius: 50%;
     overflow: hidden;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
+
 .feed-img img{
     width: 100%;
     height: 100%;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+
 }
 
 .feedback span:hover{
     background-color: var(--primary-color);
     color: var(--secondary-color);
     transition: .5s;
+
 }
 
-.feedback span:hover .feed-img img{
+.feedback span:hover .feed-img img, .feedback span:hover .tag {
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 /* Footer */
+footer{
+    background-color: black;
+    color: var(--secondary-color);
+    padding: 20px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 15px;
+}
+
+footer div{
+    margin: 20px;
+    height: 100%;
+    text-align: center;
+    position: relative;
+}
+
+footer div a{
+    color: var(--secondary-color);
+    text-decoration: none;
+    margin: 20px;
+    padding: 5px;
+
+}
+
+footer div a:hover{
+    color: var(--primary-color);
+    transition: .5s;
+}
