--- a/boot-style.css
+++ b/boot-style.css
@@ -1,3 +1,10 @@
+.container-fluid{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 img{
     width: 200px;
     height: 200px;
